# Synesis-Solana-

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  upgrade.sh
programs/datafarm/: Cargo.toml
programs/datafarm/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
tests/: contracts.js
tests/helper/: admin.json  architect.json  builder.json  index.js  validator.json
