[package]
name = "datafarm"
version = "0.1.0"
description = "Created by Seyed Hadi Hosseini im.perlish@gmail.com"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "datafarm"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
