[package]
name = "staking"
version = "0.1.0"
description = "Created by Seyed Hadi Hosseini"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
datafarm = { path = "../datafarm", features = ["cpi"] }